--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Adi Eyal <adi@openup.org.za>",
   "license": "MIT",
   "dependencies": {
+    "css": "^2.2.4",
     "d3-format": "^1.4.2",
     "d3-selection": "^1.4.1",
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
