--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "main.js": "0.0.1"
   },
   "devDependencies": {
-    "cssnano": "^4.1.10"
+    "cssnano": "^4.1.10",
+    "parcel-bundler": "^1.12.4"
+  },
+  "scripts": {
+    "dev": "parcel index.html",
+    "build": "parcel build index.html"
   }
 }
