--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "main.js": "0.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
     "parcel-bundler": "^1.12.4"
   },
