Added yarn script to standardise exported filenames

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "prebuild-dev": "shx rm -rf dist/*",
     "build-dev": "parcel build ./src/index.html --no-minify --public-url ./",
     "prebuild": "shx rm -rf dist/*",
-    "build": "parcel build ./src/index.html --public-url ./",
+    "build": "parcel build ./src/index.html --public-url ./ --no-minify",
     "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose",
-    "clean-files": "mv dist/js*.js dist/wazimap-ng.js; mv dist/js*.css dist/wazimap-ng.css"
+    "clean-files": "mv dist/js*.js dist/wazimap-ng.js; mv dist/js*.js.map dist/wazimap-ng.js.map; mv dist/js*.css dist/wazimap-ng.css"
   }
 }
