--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "build": "parcel build ./src/index.html --public-url ./ --no-minify",
     "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose",
     "clean-files": "cp dist/js*.js dist/wazimap-ng.js; cp dist/js*.js.map dist/wazimap-ng.js.map; cp dist/js*.css dist/wazimap-ng.css"
-  }
+  },
+  "browserslist": "> 0.25%, not dead"
 }
