--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "d3-selection": "^1.4.1",
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
     "js": "^0.1.0",
+    "leaflet": "~1.3.1",
+    "leaflet.markercluster": "^1.4.1",
     "main": "^1000.0.1",
     "main.js": "0.0.1",
     "shx": "^0.3.2"
