Added staging site

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prebuild": "shx rm -rf dist/*",
     "build": "parcel build ./src/index.html --public-url ./ ",
     "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose",
+    "push-staging": "push-dir --remote=staging --dir=dist --branch=gh-pages --cleanup --verbose",
     "clean-files": "cp dist/js*.js dist/wazimap-ng.js; cp dist/js*.js.map dist/wazimap-ng.js.map; cp dist/js*.css dist/wazimap-ng.css"
   },
   "browserslist": "> 0.25%, not dead"
