--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet.markercluster": "^1.4.1",
     "main": "^1000.0.1",
     "main.js": "0.0.1",
+    "save-svg-as-png": "^1.4.17",
     "shx": "^0.3.2"
   },
   "devDependencies": {
