--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
     "js": "^0.1.0",
     "leaflet": "~1.3.1",
+    "leaflet-event-forwarder": "^0.0.3",
     "leaflet.markercluster": "^1.4.1",
     "main": "^1000.0.1",
     "main.js": "0.0.1",
