--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
+    "html2canvas": "^1.0.0-rc.5",
     "js": "^0.1.0",
     "leaflet": "~1.3.1",
     "leaflet-event-forwarder": "^0.0.3",
