--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
   "presets": [
-    "@babel/preset-env"
-  ],
+    "env" 
+ ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "transform-regenerator"
   ]
 }
