--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Adi Eyal <adi@openup.org.za>",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
     "controller": "^1.0.0",
     "css": "^2.2.4",
@@ -26,11 +27,13 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4"
