--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "main": "^1000.0.1",
     "main.js": "0.0.1",
     "save-svg-as-png": "^1.4.17",
-    "shx": "^0.3.2"
+    "shx": "^0.3.2",
+    "xlsexport": "^1.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
