--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ before_script:
   - ln -s /usr/lib/chromium-browser/chromedriver "${HOME}/bin/chromedriver"
 
 script:
+  - google-chrome --version
   - cd tests
   - python main.py
