--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,12 @@ python:
 
 addons:
   chrome: stable
-  apt:
-    packages:
-      - chromium-chromedriver
 install:
   - pip install -r tests/requirements.txt
 
 before_script:
-  - google-chrome --version
+  - wget http://chromedriver.storage.googleapis.com/84.0.4147.30/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python3.8.0/bin/
   - ln -s /usr/lib/chromium-browser/chromedriver "${HOME}/bin/chromedriver"
 
 script:
