feat: add integration tests via cypress
use cypress to run integration tests and eventually e2e tests
use the features that were already produced to drive the testing process
with cypress
work in progres, currently fails but wanted to share a starting point
how this might look in the near future

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ services:
 before_script:
   - docker-compose up -d
 script:
-  - ./run_test.sh
+  - CYPRESS_BASE_URL=https://wazimap-staging.netlify.app npm run cypress
 after_script:
   - docker-compose down
