--- a/package.json
+++ b/package.json
@@ -32,17 +32,24 @@
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.9.6",
+    "@testing-library/cypress": "^7.0.0",
+    "@testing-library/dom": "^7.24.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
+    "cypress": "^5.2.0",
+    "cypress-cucumber-preprocessor": "^2.5.5",
+    "jest": "^26.4.2",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
     "test": "./run_test.sh",
+    "cypress": "cypress run --spec **/*.feature",
+    "cypress:open": "cypress open",
     "prebuild-dev": "shx rm -rf dist/*",
     "build-dev": "parcel build ./src/index.html --no-minify --public-url ./",
     "prebuild": "shx rm -rf dist/*",
@@ -51,5 +58,10 @@
     "push-staging": "push-dir --remote=staging --dir=dist --branch=gh-pages --cleanup --verbose",
     "clean-files": "cp dist/js*.js dist/wazimap-ng.js; cp dist/js*.js.map dist/wazimap-ng.js.map; cp dist/js*.css dist/wazimap-ng.css"
   },
-  "browserslist": "> 0.25%, not dead"
+  "browserslist": "> 0.25%, not dead",
+	"cypress-cucumber-preprocessor": {
+		"nonGlobalStepDefinitions": true,
+		"stepDefinitions": "__tests__/integration",
+		"commonPath": "__tests__/integration/common"
+	}
 }
