--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,14 @@
 os: linux
-language: python
-python:
-  - "3.7"
+language: node_js
+node_js:
+  - "14"
 addons:
   chrome: stable
 cache:
-  - pip
   - yarn: true
   - directories:
     - node_modules
 install:
-  - pip install -r requirements.txt
-services:
-  - docker
-before_script:
-  - docker-compose up -d
+  - npm install
 script:
   - CYPRESS_BASE_URL=https://wazimap-staging.netlify.app npm run cypress
-after_script:
-  - docker-compose down
