--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,12 @@
 os: linux
-language: python
-python:
-  - "3.7"
-addons:
-  chrome: stable
+language: node_js
+node_js:
+  - "14"
 cache:
-  - pip
   - yarn: true
   - directories:
     - node_modules
 install:
-  - pip install -r requirements.txt
-services:
-  - docker
-before_script:
-  - docker-compose up -d
+  - npm install
 script:
-  - ./run_test.sh
-after_script:
-  - docker-compose down
+  - npm test
