--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3-selection": "^1.4.1",
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
     "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.5.1",
     "js": "^0.1.0",
     "leaflet": "~1.3.1",
     "leaflet-event-forwarder": "^0.0.3",
@@ -29,20 +30,23 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.0.0-0",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-env": "^7.11.5",
     "babel-core": "^6.26.3",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
+    "jest": "^26.4.2",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
-    "test": "./run_test.sh",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "prebuild-dev": "shx rm -rf dist/*",
     "build-dev": "parcel build ./src/index.html --no-minify --public-url ./",
     "prebuild": "shx rm -rf dist/*",
@@ -51,5 +55,10 @@
     "push-staging": "push-dir --remote=staging --dir=dist --branch=gh-pages --cleanup --verbose",
     "clean-files": "cp dist/js*.js dist/wazimap-ng.js; cp dist/js*.js.map dist/wazimap-ng.js.map; cp dist/js*.css dist/wazimap-ng.css"
   },
-  "browserslist": "> 0.25%, not dead"
+  "browserslist": "> 0.25%, not dead",
+  "jest": {
+    "setupFiles": [
+      "./setup-jest.js"
+    ]
+  }
 }
