--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,15 @@
 {
   "presets": [
-		"@babel/preset-env",
+		"@babel/preset-env"
  ],
+ env: {
+    test: {
+      plugins: [
+        '@babel/plugin-proposal-class-properties',
+      ]
+    }
+ },
   "plugins": [
-    "transform-regenerator"
+    "transform-regenerator",
   ]
 }
