fix: add yarn.lock; add yarn cache dir; exclude tests
exclude tests from jest and set the cache dir for yarn explicitly for
cypress

--- a/package.json
+++ b/package.json
@@ -75,6 +75,10 @@
     ],
     "setupFilesAfterEnv": [
       "./jest-custom-matchers.js"
+    ],
+    "testPathIgnorePatterns": [
+      "/__tests__/integration/",
+      "/node_modules/"
     ]
   }
 }
