--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,8 +9,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14.x
-          # Install NPM dependencies, cache them correctly
-          # and run all Cypress tests
+      - name: Get yarn cache
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
       - name: Cypress run
         uses: cypress-io/github-action@v2.6.1
         env:
