--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,7 +1,7 @@
-name: End-to-end tests
-on: push
+name: E2E
+on: pull_request
 jobs:
-  cypress-run:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -12,7 +12,12 @@ jobs:
       - name: Get yarn cache
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Set url
+        run: echo "CYPRESS_BASE_URL=https://deploy-preview-${{github.event.pull_request.number}}--wazimap-staging.netlify.app" >> $GITHUB_ENV
+      - name: wait for netlify review app
+        uses: nev7n/wait_for_response@v1
+        with:
+          url: ${{env.CYPRESS_BASE_URL}}
+
       - name: Cypress run
         uses: cypress-io/github-action@v2.6.1
-        env:
-          CYPRESS_BASE_URL: https://wazimap-staging.netlify.app
