--- a/.github/workflows/e2e_pr.yml
+++ b/.github/workflows/e2e_pr.yml
@@ -1,7 +1,7 @@
 name: E2E
 on: pull_request
 jobs:
-  tests:
+  e2e_tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,6 +18,7 @@ jobs:
         uses: nev7n/wait_for_response@v1
         with:
           url: ${{env.CYPRESS_BASE_URL}}
+          timeout: 120000
 
       - name: Cypress run
         uses: cypress-io/github-action@v2.6.1
