Fix: Unit Tests on PRs (#155)
* chore: update CI pipeline

add 2 minute timeout (waiting for netlify to deploy PR) for E2E PR tests
change the name on CI to uni_tests and change it back to just push (should
be sufficient)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
-name: CI
+name: Unit tests
 on: push
 jobs:
-  tests:
+  unit_tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
