--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "save-svg-as-png": "^1.4.17",
     "shx": "^0.3.2",
     "svelte-dev-tools": "^0.0.2",
+    "vega": "^5.17.0",
+    "vega-embed": "^6.13.0",
+    "vega-lite": "^4.17.0",
     "xlsexport": "^1.5.2"
   },
   "devDependencies": {
