--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
     "cypress": "^5.2.0",
     "cypress-cucumber-preprocessor": "^2.5.5",
     "jest": "^26.4.2",
-    "miragejs": "^0.1.41",
-    "parcel": "1.12.4",
-    "parcel-bundler": "1.12.4"
+    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.4"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
