feat: loading the index.html for tests
using the nice plugin babel-plugin-preval to include files on loading
not bundling, we don't need that in production or anywhere else in the
bundle, this is just needed for tests
it's "easier" but definetely smaller than any of the loaders, which
might have big side effects. using this plugin is very nimble and allows
us to just use the file system to load the src index.html as a string

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cypress": "^5.2.0",
     "cypress-cucumber-preprocessor": "^2.5.5",
     "jest": "^26.4.2",
+    "babel-plugin-preval": "^5.0.0",
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.5"
