feat: use chart config for vega
we now support xTicks, min and max for the values and percentages
added tests to give us confidence it works and we do not break things
refactored the barchart to be separate files, for easier testing and
organization

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "babel-jest": "^26.3.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
+    "canvas": "^2.8.0",
     "cssnano": "^4.1.10",
     "cypress": "^5.2.0",
     "cypress-cucumber-preprocessor": "^2.5.5",
