--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "controller": "^1.0.0",
     "css": "^2.2.4",
     "d3-array": "^2.12.1",
-    "d3-format": "^1.4.2",
+    "d3-format": "^3.0.1",
     "d3-scale": "^3.2.1",
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
     "html2canvas": "^1.0.0-rc.5",
     "i18next": "^20.2.2",
+    "import-webflow-export": "^0.0.4",
     "jquery": "^3.5.1",
     "js": "^0.1.0",
     "leaflet": "~1.3.1",
@@ -84,6 +85,20 @@
     "testPathIgnorePatterns": [
       "/__tests__/integration/",
       "/node_modules/"
+    ]
+  },
+  "importWebflowExport": {
+    "copyTrees": {
+      "css": "src/css",
+      "js": "src/js",
+      "images": "src/images"
+    },
+    "importHtml": [
+      {
+        "glob": "index.html",
+        "destDir": "src",
+        "transforms": "./src/js/webflow/import.js"
+      }
     ]
   }
 }
