fixing tutorials and logging error if the element is not found

--- a/package.json
+++ b/package.json
@@ -98,6 +98,10 @@
         "glob": "index.html",
         "destDir": "src",
         "transforms": "./src/js/webflow/import.js"
+      },
+      {
+        "glob": "{401,about}.html",
+        "destDir": "src"
       }
     ]
   }
