--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,12 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: 14.x
+
     - name: Install modules
       run: yarn
-    - name: Run tests
+
+    - name: Run unit tests
       run: yarn test
+
+    - name: Run GUI tests
+      run: yarn test:gui
