--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "cypress": "^5.2.0",
     "cypress-cucumber-preprocessor": "^2.5.5",
     "jest": "^26.4.2",
+    "jest-puppeteer": "^5.0.4",
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
-    "parcel-bundler": "1.12.5"
+    "parcel-bundler": "1.12.5",
+    "puppeteer": "^10.1.0"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
@@ -61,6 +63,7 @@
     "cypress:open": "cypress open",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:gui": "jest -c jest.config.gui.js",
     "prebuild-dev": "shx rm -rf dist/*",
     "build-dev": "parcel build ./src/index.html --no-minify --public-url ./",
     "prebuild": "shx rm -rf dist/*",
@@ -84,6 +87,7 @@
     ],
     "testPathIgnorePatterns": [
       "/__tests__/integration/",
+      "/__tests__/gui/",
       "/node_modules/"
     ]
   },
