--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.5",
-    "puppeteer": "^10.1.0"
+    "puppeteer": "<10"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
