--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "jest": "^26.4.2",
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
-    "parcel-bundler": "1.12.5"
+    "parcel-bundler": "1.12.5",
+    "html-loader-jest": "0.2.1"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
@@ -85,7 +86,15 @@
     "testPathIgnorePatterns": [
       "/__tests__/integration/",
       "/node_modules/"
-    ]
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "html"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.html$": "html-loader-jest"
+    }
   },
   "importWebflowExport": {
     "copyTrees": {
