--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.5",
-    "html-loader-jest": "0.2.1"
+    "html-loader-jest": "0.2.1",
+    "jest-transform-stub": "2.0.0"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
@@ -93,6 +94,7 @@
     ],
     "transform": {
       "^.+\\.js$": "babel-jest",
+      ".+\\.(css|styl|less|sass|scss|png|jpg|gif|ttf|woff|woff2)$": "jest-transform-stub",
       "^.+\\.html$": "html-loader-jest"
     }
   },
