--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "jest": "^26.4.2",
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
-    "parcel-bundler": "1.12.5"
+    "parcel-bundler": "1.12.5",
+    "html-loader-jest": "0.2.1",
+    "jest-transform-stub": "2.0.0"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
@@ -84,6 +86,15 @@
     "testPathIgnorePatterns": [
       "/__tests__/integration/",
       "/node_modules/"
-    ]
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "html"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      ".+\\.(css|styl|less|sass|scss|png|jpg|gif|ttf|woff|woff2)$": "jest-transform-stub",
+      "^.+\\.html$": "html-loader-jest"
+    }
   }
 }
