--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
     "html2canvas": "^1.0.0-rc.5",
     "i18next": "^20.2.2",
-    "import-webflow-export": "^0.0.4",
     "jquery": "^3.5.1",
     "js": "^0.1.0",
     "leaflet": "~1.3.1",
@@ -53,7 +52,9 @@
     "jest": "^26.4.2",
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
-    "parcel-bundler": "1.12.5"
+    "parcel-bundler": "1.12.5",
+    "html-loader-jest": "0.2.1",
+    "jest-transform-stub": "2.0.0"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
@@ -85,20 +86,15 @@
     "testPathIgnorePatterns": [
       "/__tests__/integration/",
       "/node_modules/"
-    ]
-  },
-  "importWebflowExport": {
-    "copyTrees": {
-      "css": "src/css",
-      "js": "src/js",
-      "images": "src/images"
-    },
-    "importHtml": [
-      {
-        "glob": "index.html",
-        "destDir": "src",
-        "transforms": "./src/js/webflow/import.js"
-      }
-    ]
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "html"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      ".+\\.(css|styl|less|sass|scss|png|jpg|gif|ttf|woff|woff2)$": "jest-transform-stub",
+      "^.+\\.html$": "html-loader-jest"
+    }
   }
 }
