--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
+    "debug": "^4.3.2",
     "html2canvas": "^1.0.0-rc.5",
     "i18next": "^20.2.2",
     "jquery": "^3.5.1",
@@ -46,6 +47,7 @@
     "babel-jest": "^26.3.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "canvas": "^2.8.0",
+    "chrome-remote-interface": "^0.31.0",
     "cssnano": "^4.1.10",
     "cypress": "^8.2.0",
     "cypress-cucumber-preprocessor": "^2.5.5",
