--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,17 @@
 name: Unit tests
-on: [push, pull_request]
+on: [ push, pull_request ]
 jobs:
   unit_tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 14.x
-    - name: Install modules
-      run: yarn
-    - name: Run tests
-      run: yarn test
-    - name: Run gui tests
-      run: yarn test:gui
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - name: Install modules
+        run: yarn
+      - name: Run tests
+        run: yarn test
+      - name: Run gui tests
+        run: yarn test:gui
+        browser: chrome
