--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,6 @@ jobs:
         run: yarn test
       - name: Run gui tests
         run: yarn test:gui
+        with:
+          browser: chrome
+          headless: true
