--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "scripts": {
     "start": "parcel ./src/index.html",
-    "cypress:gui": "cypress run --browser chrome --spec __tests__/gui/*.feature",
+    "cypress:gui": "cypress run --browser chrome --spec __tests__/gui/*.feature --record --key=1d9905ed-3aca-49b4-8915-08406d8d8881 --ci-build-id=githubActions --parallel",
     "cypress": "cypress run --spec __tests__/e2e/*.feature",
     "cypress:open": "cypress open",
     "test:gui": "start-server-and-test start http://localhost:1234 cypress:gui",
