--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "scripts": {
     "start": "parcel ./src/index.html",
     "cypress:gui": "cypress run --browser chrome --spec __tests__/gui/*.feature --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
+    "cypress:gui-local": "cypress run --browser chrome --spec __tests__/gui/*.feature",
     "cypress": "cypress run --spec __tests__/e2e/*.feature",
     "cypress:open": "cypress open",
     "test:gui": "start-server-and-test start http://localhost:1234 cypress:gui",
