added test:gui-local script

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "cypress:gui-local": "cypress run --browser chrome --spec __tests__/gui/*.feature",
     "cypress": "cypress run --spec __tests__/e2e/*.feature",
     "cypress:open": "cypress open",
+    "test:gui-local": "start-server-and-test start http://localhost:1234 cypress:gui-local",
     "test:gui": "start-server-and-test start http://localhost:1234 cypress:gui",
     "test": "jest",
     "test:watch": "jest --watch",
