--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "main": "^1000.0.1",
     "main.js": "0.0.1",
     "papaparse": "^5.3.0",
+    "pixelmatch": "^5.2.1",
     "save-svg-as-png": "^1.4.17",
     "sheetjs": "^2.0.0",
     "shx": "^0.3.2",
