--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "d3-selection": "^1.4.1",
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
     "debug": "^4.3.2",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "html2canvas": "^1.0.0-rc.5",
     "i18next": "^20.2.2",
     "import-webflow-export": "^0.0.4",
@@ -55,7 +57,6 @@
     "cy-verify-downloads": "^0.0.5",
     "cypress": "^8.2.0",
     "cypress-cucumber-preprocessor": "^2.5.5",
-    "cy-verify-downloads":"^0.0.5",
     "html-loader-jest": "0.2.1",
     "jest": "^26.4.2",
     "jest-transform-stub": "2.0.0",
