--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@sentry/browser": "^5.20.1",
+    "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
     "concurrently": "^7.2.1",
@@ -62,12 +63,13 @@
     "jest": "^26.4.2",
     "jest-transform-stub": "2.0.0",
     "miragejs": "^0.1.41",
+    "nodemon": "^2.0.16",
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.5"
   },
   "scripts": {
     "start": "parcel build src/index.html &&  node src/js/server.js",
-    "dev": "concurrently --kill-others 'parcel watch src/index.html' 'node src/js/server.js'",
+    "dev": "concurrently --kill-others 'parcel watch src/index.html' 'nodemon src/js/server.js'",
     "cypress:gui": "cypress run --browser chrome --spec __tests__/gui/*.feature --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
     "cypress:gui-local": "cypress run --browser chrome --spec __tests__/gui/*.feature",
     "cypress": "cypress run --spec __tests__/e2e/*.feature",
