Clearer workflow name and use prod netlify app

--- a/.github/workflows/e2e_pr.yml
+++ b/.github/workflows/e2e_pr.yml
@@ -13,7 +13,7 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - name: Set url
-        run: echo "CYPRESS_BASE_URL=https://deploy-preview-${{github.event.pull_request.number}}--wazimap-staging.netlify.app" >> $GITHUB_ENV
+        run: echo "CYPRESS_BASE_URL=https://deploy-preview-${{github.event.pull_request.number}}--wazimap-production.netlify.app" >> $GITHUB_ENV
       - name: wait for netlify review app
         uses: nev7n/wait_for_response@v1
         with:
