--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,4 +21,4 @@ jobs:
           browser: chrome
           headless: true
         env:
-          CYPRESS_BASE_URL: https://wazimap-staging.netlify.app
+          CYPRESS_BASE_URL: https://staging-wazimap-production.netlify.app
