--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
   "scripts": {
     "start": "parcel build src/index.html &&  node src/js/server.js",
     "dev": "concurrently --kill-others 'parcel watch src/index.html' 'nodemon src/js/server.js'",
-    "cypress:gui": "cypress run --browser chrome --spec __tests__/gui/*.feature --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
-    "cypress:gui-local": "cypress run --browser chrome --spec __tests__/gui/*.feature",
-    "cypress": "cypress run --spec __tests__/e2e/*.feature",
+    "cypress:gui": "cypress run --browser chrome --spec '__tests__/gui/*.feature' --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
+    "cypress:gui-local": "cypress run --browser chrome --spec '__tests__/gui/*.feature'",
+    "cypress": "cypress run --spec '__tests__/e2e/*.feature'",
     "cypress:open": "cypress open",
     "test:gui-local": "start-server-and-test start http://localhost:1234 cypress:gui-local",
     "test:gui": "start-server-and-test start http://localhost:1234 cypress:gui",
