--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
-    "concurrently": "^7.2.1",
     "controller": "^1.0.0",
     "css": "^2.2.4",
     "d3-array": "^2.12.1",
@@ -55,6 +54,7 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "canvas": "^2.8.0",
     "chrome-remote-interface": "^0.31.0",
+    "concurrently": "^7.2.1",
     "cssnano": "^4.1.10",
     "cy-verify-downloads": "^0.0.5",
     "cypress": "^8.2.0",
@@ -70,7 +70,8 @@
   "scripts": {
     "watch": "parcel watch src/index.html src/layouts/main.html",
     "start": "yarn build &&  node src/js/server.js",
-    "dev": "concurrently --kill-others 'yarn watch' 'nodemon --watch src/js src/js/server.js'",
+    "dev": "parcel ./src/index.html",
+    "dev-server-side": "concurrently --kill-others 'yarn watch' 'nodemon --watch src/js src/js/server.js'",
     "cypress:gui": "cypress run --browser chrome --spec '__tests__/gui/*.feature' --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
     "cypress:gui-local": "cypress run --browser chrome --spec '__tests__/gui/*.feature'",
     "cypress": "cypress run --spec '__tests__/e2e/*.feature'",
