--- a/.github/workflows/unit_gui_tests.yml
+++ b/.github/workflows/unit_gui_tests.yml
@@ -1,7 +1,7 @@
 name: "Unit & GUI tests"
 on: [ push, pull_request ]
 jobs:
-  unit_tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -10,6 +10,8 @@ jobs:
           node-version: 14.x
       - name: Install modules
         run: yarn
+      - name: Build bundles
+        run: yarn build
       - name: Run tests
         run: yarn test
       - name: Run gui tests
