--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "main": "^1000.0.1",
     "main.js": "0.0.1",
     "papaparse": "^5.3.0",
+    "parcel-bundler": "1.12.5",
     "pixelmatch": "^5.2.1",
     "save-svg-as-png": "^1.4.17",
     "sheetjs": "^2.0.0",
@@ -63,13 +64,11 @@
     "jest": "^26.4.2",
     "jest-transform-stub": "2.0.0",
     "miragejs": "^0.1.41",
-    "nodemon": "^2.0.16",
-    "parcel": "1.12.4",
-    "parcel-bundler": "1.12.5"
+    "nodemon": "^2.0.16"
   },
   "scripts": {
     "watch": "parcel watch src/index.html src/layouts/main.html",
-    "start": "yarn build &&  node src/js/server.js",
+    "start": "node src/js/server.js",
     "dev": "parcel ./src/index.html",
     "dev-server-side": "concurrently --kill-others 'yarn watch' 'nodemon --watch src/js src/js/server.js'",
     "cypress:gui": "cypress run --browser chrome --spec '__tests__/gui/*.feature' --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
