--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet.markercluster": "^1.4.1",
     "main": "^1000.0.1",
     "main.js": "0.0.1",
+    "morgan": "^1.10.0",
     "papaparse": "^5.3.0",
     "parcel-bundler": "1.12.5",
     "pixelmatch": "^5.2.1",
