--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wazimap-ng",
   "version": "1.0.0",
-  "main": "index.js",
   "author": "Adi Eyal <adi@openup.org.za>",
   "license": "MIT",
   "dependencies": {
-    "@sentry/browser": "^5.20.1",
-    "babel-polyfill": "^6.26.0",
+    "@babel/polyfill": "^7.12.1",
+    "@sentry/browser": "^7.1.1",
+    "@swc/helpers": "^0.3.17",
     "category": "^0.1.2",
     "controller": "^1.0.0",
     "css": "^2.2.4",
@@ -25,10 +25,13 @@
     "leaflet": "~1.3.1",
     "leaflet-event-forwarder": "^0.0.3",
     "leaflet.markercluster": "^1.4.1",
+    "lodash": "^4.17.21",
     "main": "^1000.0.1",
     "main.js": "0.0.1",
     "papaparse": "^5.3.0",
+    "parcel": "^2.0.0",
     "pixelmatch": "^5.2.1",
+    "regenerator-runtime": "^0.13.9",
     "save-svg-as-png": "^1.4.17",
     "sheetjs": "^2.0.0",
     "shx": "^0.3.2",
@@ -40,28 +43,22 @@
     "xlsx": "^0.17.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-env": "^7.14.0",
+    "@babel/core": "^7.12.0",
+    "@parcel/reporter-bundle-analyzer": "^2.6.0",
     "@testing-library/cypress": "^7.0.0",
     "@testing-library/dom": "^7.27.0",
     "@testing-library/jest-dom": "^5.11.6",
-    "babel-jest": "^26.3.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
     "canvas": "^2.8.0",
     "chrome-remote-interface": "^0.31.0",
     "cssnano": "^4.1.10",
     "cy-verify-downloads": "^0.0.5",
     "cypress": "^8.2.0",
     "cypress-cucumber-preprocessor": "^2.5.5",
-    "cy-verify-downloads":"^0.0.5",
     "html-loader-jest": "0.2.1",
     "jest": "^26.4.2",
     "jest-transform-stub": "2.0.0",
-    "miragejs": "^0.1.41",
-    "parcel": "1.12.4",
-    "parcel-bundler": "1.12.5"
+    "miragejs": "^0.1.45",
+    "source-map-explorer": "^2.5.2"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
