--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "vega": "^5.17.0",
     "vega-embed": "^6.13.0",
     "vega-lite": "^4.17.0",
-    "xlsx": "^0.17.0",
-    "xss": "^1.0.13"
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -99,6 +98,7 @@
       "/node_modules/",
       ".data.js"
     ],
+    "transformIgnorePatterns": ["node_modules/(?!(leaflet|leaflet.markercluster)/)"],
     "moduleFileExtensions": [
       "js",
       "html"
