--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Adi Eyal <adi@openup.org.za>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.5",
     "@sentry/browser": "^5.20.1",
     "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
@@ -30,6 +33,8 @@
     "papaparse": "^5.3.0",
     "pixelmatch": "^5.2.1",
     "save-svg-as-png": "^1.4.17",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "sheetjs": "^2.0.0",
     "shx": "^0.3.2",
     "start-server-and-test": "^1.13.1",
@@ -62,7 +67,7 @@
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.5",
-    "sass": "^1.53.0"
+    "sass": "^1.52.3"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
