--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-env": "^7.14.0",
     "@testing-library/cypress": "^7.0.0",
     "@testing-library/dom": "^7.27.0",
     "@testing-library/jest-dom": "^5.11.6",
     "babel-jest": "^26.3.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
-    "canvas": "^2.8.0",
+    "canvas": "^2.9.3",
     "chrome-remote-interface": "^0.31.0",
     "cssnano": "^4.1.10",
     "cy-verify-downloads": "^0.0.5",
@@ -68,7 +69,8 @@
     "miragejs": "^0.1.41",
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.5",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "react-test-renderer": "^18.2.0"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
