--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.5",
     "@sentry/browser": "^5.20.1",
+    "@types/react": "^16.8.6 || ^17.0.0",
     "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
     "controller": "^1.0.0",
@@ -44,7 +45,9 @@
     "vega-embed": "^6.13.0",
     "vega-lite": "^4.17.0",
     "xlsx": "^0.17.0",
-    "xss": "^1.0.13"
+    "xss": "^1.0.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
