--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "wazimap-ng",
   "version": "1.0.0",
-  "main": "index.js",
   "author": "Adi Eyal <adi@openup.org.za>",
   "license": "MIT",
+  "engines": {
+    "node": "14"
+  },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -45,21 +47,17 @@
     "vega-embed": "^6.13.0",
     "vega-lite": "^4.17.0",
     "xlsx": "^0.17.0",
-    "xss": "^1.0.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "xss": "^1.0.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-env": "^7.14.0",
+    "@parcel/transformer-sass": "2.7.0",
     "@testing-library/cypress": "^7.0.0",
     "@testing-library/dom": "^7.27.0",
     "@testing-library/jest-dom": "^5.11.6",
     "babel-jest": "^26.3.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
     "canvas": "^2.9.3",
     "chrome-remote-interface": "^0.31.0",
     "cssnano": "^4.1.10",
@@ -70,10 +68,9 @@
     "jest": "^26.4.2",
     "jest-transform-stub": "2.0.0",
     "miragejs": "^0.1.41",
-    "parcel": "1.12.4",
-    "parcel-bundler": "1.12.5",
-    "sass": "^1.52.3",
-    "react-test-renderer": "^18.2.0"
+    "parcel": "2.7.0",
+    "react-test-renderer": "^18.2.0",
+    "sass": "^1.52.3"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
