--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.8.5",
     "@sentry/browser": "^5.20.1",
     "@types/react": "^16.8.6 || ^17.0.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "category": "^0.1.2",
     "controller": "^1.0.0",
     "css": "^2.2.4",
@@ -52,11 +53,14 @@
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-env": "^7.14.0",
     "@parcel/transformer-sass": "2.7.0",
     "@testing-library/cypress": "^7.0.0",
     "@testing-library/dom": "^7.27.0",
     "@testing-library/jest-dom": "^5.11.6",
     "babel-jest": "^26.3.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "canvas": "^2.9.3",
     "chrome-remote-interface": "^0.31.0",
     "cssnano": "^4.1.10",
