Works with HOSTNAME=geo.youthexplorer.org.za vercel dev --listen 1234

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sentry/browser": "^5.20.1",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^16.8.6 || ^17.0.0",
+    "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
     "controller": "^1.0.0",
@@ -23,6 +24,8 @@
     "d3-selection": "^1.4.1",
     "data-visualisations": "https://github.com/vulekamali/data-visualisations.git#reusable",
     "debug": "^4.3.2",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "html2canvas": "^1.0.0-rc.5",
     "i18next": "^20.2.2",
     "import-webflow-export": "^0.0.4",
@@ -33,6 +36,7 @@
     "leaflet.markercluster": "^1.4.1",
     "main": "^1000.0.1",
     "main.js": "0.0.1",
+    "morgan": "^1.10.0",
     "notistack": "^2.0.5",
     "papaparse": "^5.3.0",
     "pixelmatch": "^5.2.1",
@@ -46,6 +50,7 @@
     "vega": "^5.17.0",
     "vega-embed": "^6.13.0",
     "vega-lite": "^4.17.0",
+    "vercel": "^28.8.0",
     "xlsx": "^0.17.0",
     "xss": "^1.0.13"
   },
