Add a mock server that provides a profile API response for GUI tests

--- a/package.json
+++ b/package.json
@@ -75,19 +75,20 @@
     "jest": "^26.4.2",
     "jest-transform-stub": "2.0.0",
     "miragejs": "^0.1.41",
-    "parcel": "1.12.4",
     "parcel-bundler": "1.12.5",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.52.3"
   },
   "scripts": {
-    "start": "parcel ./src/index.html",
+    "start": "vercel dev --listen 1234",
+    "start-mock-backend": "node __tests__/mock_backend_server",
+    "start-with-mock-backend": "yarn start-mock-backend & API_URL=http://localhost:4321 yarn start && fg",
     "cypress:gui": "cypress run --browser chrome --spec __tests__/gui/*.feature --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
     "cypress:gui-local": "cypress run --browser chrome --spec __tests__/gui/*.feature",
     "cypress": "cypress run --spec __tests__/e2e/*.feature",
     "cypress:open": "cypress open",
-    "test:gui-local": "start-server-and-test start http://localhost:1234 cypress:gui-local",
-    "test:gui": "start-server-and-test start http://localhost:1234 cypress:gui",
+    "test:gui-local": "start-server-and-test start-with-mock-backend http://localhost:1234 cypress:gui-local",
+    "test:gui": "start-server-and-test start-with-mock-backend http://localhost:1234 cypress:gui",
     "test": "jest",
     "test:watch": "jest --watch",
     "prebuild-dev": "shx rm -rf dist/*",
