--- a/package.json
+++ b/package.json
@@ -81,15 +81,15 @@
   },
   "scripts": {
     "start": "vercel dev --listen 1234",
-    "start-mock-vercel": "node __tests__/mock_vercel_server.js",
+    "start-mock-vercel": "node __tests__/mock_vercel_server",
     "start-mock-backend": "node __tests__/mock_backend_server",
-    "start-with-mock-backend": "yarn start-mock-backend & API_URL=http://localhost:4321 yarn start-mock-vercel && fg",
+    "start-mock-front-back": "yarn start-mock-backend & API_URL=http://localhost:4321 yarn start-mock-vercel && fg",
     "cypress:gui": "cypress run --browser chrome --spec __tests__/gui/*.feature --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
     "cypress:gui-local": "cypress run --browser chrome --spec __tests__/gui/*.feature",
     "cypress": "cypress run --spec __tests__/e2e/*.feature",
     "cypress:open": "cypress open",
-    "test:gui-local": "start-server-and-test start-with-mock-backend http://localhost:1234 cypress:gui-local",
-    "test:gui": "start-server-and-test start-with-mock-backend http://localhost:1234 cypress:gui",
+    "test:gui-local": "start-server-and-test start-mock-front-back http://localhost:1234 cypress:gui-local",
+    "test:gui": "start-server-and-test start-mock-front-back http://localhost:1234 cypress:gui",
     "test": "jest",
     "test:watch": "jest --watch",
     "prebuild-dev": "shx rm -rf dist/*",
